Fixed problem with message not showing

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -5,11 +5,15 @@
 h1 {
 	color: gray;
 	text-align: center;
+	font-family: Helvetica;
+	font-weight: normal;
 }
 
 h2 {
 	color: green;
 	text-align: center;
+	font-family: Helvetica;
+	font-weight: normal;
 }  
 
 body {
